cmake_minimum_required(VERSION 3.16)
project(PathfinderVisualizer)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)

include_directories(include)

add_executable(pathfinder
    src/main.cpp
    src/glad.c
)

target_link_libraries(pathfinder
    glfw
    OpenGL::GL
)
